--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ But it must have the following features:
   </head>
   <body>
     <div class="whole">
-    <img src="../6.4 Motivation Meme Project/assets/images/daenerys.jpeg" alt="preview of lady holding a black oval">
+    <img src="./assets/images/daenerys.jpeg" alt="preview of lady holding a black oval">
     <h1>THAT SPECIAL MOMENT</h1>
     <p>When you finally get that promotion you've been working towards.</p>
     </div>
